--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,83 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
 * {
-  border: 1px dotted black;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body {
   text-align: left;
-}
+  font-family: 'Source Sans Pro', sans-serif;
+  background-color: #DFCBBD; }
 
 #wrapper {
-  border: 3px dotted green;
   height: 100vh;
-  width: 100%;
-}
+  width: 100%; }
 
 #editorWrapper {
   min-width: 450px;
-  width: 50vw;
+  width: 45vw;
   margin: 15px auto 15px auto;
-  // display: flex;
-  // flex-direction: column;
-}
+  background-color: #F2E9E3;
+  border: 1px solid #B98779;
+  box-shadow: 1px 1px 10px 1px; }
 
 #previewerWrapper {
   min-width: 550px;
-  width: 65vw;
-  height: 500px;
+  width: 60vw;
+  min-height: 500px;
   margin: 15px auto 15px auto;
-}
+  background-color: #F2E9E3;
+  border: 1px solid #B98779;
+  box-shadow: 1px 1px 10px 1px; }
 
 .toolbar {
   width: 100%;
   height: 25px;
   display: flex;
   align-items: center;
-  i {
+  background-color: #D0B1A8;
+  border: 1px solid #B98779; }
+  .toolbar i {
     width: 20px;
-    margin-left: 5px;
-  }
-  .fa-compress-alt, .fa-expand-alt {
+    margin-left: 5px; }
+  .toolbar .fa-compress-alt, .toolbar .fa-expand-alt {
     margin-right: 5px;
-    margin-left: auto;
-    &:hover {
-      cursor: pointer;
-    }
-  } 
-}
+    margin-left: auto; }
+    .toolbar .fa-compress-alt:hover, .toolbar .fa-expand-alt:hover {
+      cursor: pointer; }
 
-#editorText {
+#editor {
   width: 100%;
   min-height: 170px;
   resize: vertical;
-}
+  background-color: #F2E9E3;
+  vertical-align: top;
+  border: none;
+  outline: none;
+  padding: 7px; }
+
+#preview {
+  height: 100%;
+  width: 100%;
+  padding: 0px 15px; }
+  #preview img {
+    max-width: 95%;
+    display: block;
+    margin: auto; }
+  #preview p > code {
+    background: white;
+    padding: 0px 3px; }
+  #preview pre {
+    display: block;
+    background: white;
+    padding: 5px; }
+  #preview table, #preview td, #preview th {
+    border: 2px solid #B98779;
+    border-collapse: collapse;
+    padding: 3px; }
 
 .hide {
-  display: none !important;
-}
+  display: none !important; }
 
 .maximize {
-  height: 100%;
-  #editorText {
-    height: 100%;
-  }
-}
+  height: 100%; }
+  .maximize #editorText {
+    height: 100%; }
