--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,13 @@ body {
   background-color: #DFCBBD; }
 
 #wrapper {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%; }
 
 #editorWrapper {
   min-width: 450px;
   width: 45vw;
+  min-height: 170px;
   margin: 15px auto 15px auto;
   background-color: #F2E9E3;
   border: 1px solid #B98779;
@@ -55,6 +56,7 @@ body {
   padding: 7px; }
 
 #preview {
+  min-height: 200px;
   height: 100%;
   width: 100%;
   padding: 0px 15px; }
@@ -78,6 +80,6 @@ body {
   display: none !important; }
 
 .maximize {
-  height: 100%; }
-  .maximize #editorText {
-    height: 100%; }
+  min-height: 100vh; }
+  .maximize #editor {
+    min-height: 95vh; }
